--- a/Backend-JS/feed-service/.env.development
+++ b/Backend-JS/feed-service/.env.development
@@ -2,7 +2,8 @@
 PORT=3003
 NODE_ENV=development
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://pratiknikat01:krishimantrapratiknikat@krishiprodmain.lwotx.mongodb.net/?retryWrites=true&w=majority&appName=KrishiProdMain
+
+MONGODB_URI=mongodb+srv://pratik013pratik:krishimantrapratiknikat@krishidevfeeds.ui10f.mongodb.net/?retryWrites=true&w=majority&appName=KrishiDevFeeds
 # JWT Configuration
 JWT_SECRET=shreemant
 JWT_EXPIRATION=1d
