--- a/Backend-JS/reel-service/.env
+++ b/Backend-JS/reel-service/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/KrishiReel
+MONGODB_URI=mongodb+srv://pratik013pratik:krishimantrapratiknikat@krishidevreels.r9yti.mongodb.net/?retryWrites=true&w=majority&appName=KrishiDevReels
 AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
 AWS_REGION=us-east-1
