--- a/Frontend/krishimantra/ios/Runner/Info.plist
+++ b/Frontend/krishimantra/ios/Runner/Info.plist
@@ -62,8 +62,16 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to microphone for videos.</string>
 	<key>NSCameraUsageDescription</key>
-   <string>This app needs camera access to take photos of crops for analysis</string>
-   <key>NSPhotoLibraryUsageDescription</key>
-   <string>This app needs photo library access to select crop images for analysis</string>
+    <string>This app needs camera access to take photos of crops for analysis</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs photo library access to select crop images for analysis</string>
+   
+    <key>NSAppTransportSecurity</key>
+    <dict>
+	   <key>NSAllowsArbitraryLoads</key>
+	   <true/>
+	</dict>
+
+
 </dict>
 </plist>
