--- a/Frontend/krishimantra/pubspec.yaml
+++ b/Frontend/krishimantra/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   flutter_markdown: ^0.6.18
   flutter_highlight: ^0.7.0
   connectivity_plus: ^2.3.0
+  chewie: ^1.7.1
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
