--- a/Backend-JS/api-gateway-service/.env
+++ b/Backend-JS/api-gateway-service/.env
@@ -17,3 +17,12 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
 LOG_LEVEL=debug 
+
+
+
+# AWS CREDENTIALS
+AWS_ACCESS_KEY_ID=AKIA356SKDKSVAZKB3PX
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=ap-south-1
+AWS_BUCKET_NAME=krishidev
+AWS_CLOUDFRONT_DOMAIN=https://d1f0j13imieepb.cloudfront.net
