--- a/Backend-JS/api-gateway-service/.env.development
+++ b/Backend-JS/api-gateway-service/.env.development
@@ -20,7 +20,7 @@ LOG_LEVEL=debug
 
 
 # AWS CREDENTIALS
-AWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY_ID
-AWS_SECRET_ACCESS_KEY=YOUR_SECRET_ACCESS_KEY
-AWS_REGION=YOUR_REGION
-AWS_BUCKET_NAME=YOUR_BUCKET_NAME
+AWS_ACCESS_KEY_ID=AKIA356SKDKSVAZKB3PX
+AWS_SECRET_ACCESS_KEY=1PF9jmZhi1eoTliLKKkhASJjwa6SiQq7Z7wPzFXO
+AWS_REGION=ap_south_1
+AWS_BUCKET_NAME=krishidev
