--- a/Backend-JS/feed-service/.env
+++ b/Backend-JS/feed-service/.env
@@ -2,7 +2,7 @@
 PORT=3003
 NODE_ENV=development
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/KrishiFeeds
+MONGODB_URI=mongodb+srv://pratik013pratik:krishimantrapratiknikat@krishidevfeeds.ui10f.mongodb.net/?retryWrites=true&w=majority&appName=KrishiDevFeeds
 # JWT Configuration
 JWT_SECRET=your_very_long_and_complex_secret_key_here
 JWT_EXPIRATION=1d
