--- a/Backend-JS/message-svc/.env
+++ b/Backend-JS/message-svc/.env
@@ -3,7 +3,7 @@ PORT=3004
 NODE_ENV=development # Change to 'production' in production environment
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/KrishiChats
+MONGODB_URI=mongodb+srv://pratik013pratik:krishimantrapratiknikat@krishidevmessage.bdyub.mongodb.net/?retryWrites=true&w=majority&appName=KrishiDevMessage
 MONGODB_MAX_POOL_SIZE=100
 
 # Redis Configuration
