--- a/Frontend/krishimantra/android/build.gradle
+++ b/Frontend/krishimantra/android/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.0'
+    }
+}
+
 allprojects {
     repositories {
         google()
