--- a/Frontend/krishimantra/pubspec.yaml
+++ b/Frontend/krishimantra/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   connectivity_plus: ^2.3.0
   chewie: ^1.7.1
   pin_code_fields: ^8.0.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
