--- a/Backend-JS/api-gateway-service/.env.development
+++ b/Backend-JS/api-gateway-service/.env.development
@@ -7,9 +7,10 @@ MAIN_SERVICE_URL=http://localhost:3002
 MESSAGE_SERVICE_URL=http://localhost:3004
 FEED_SERVICE_URL=http://localhost:3003
 REEL_SERVICE_URL=http://localhost:3005
+NOTIFICATION_SERVICE_URL=http://localhost:3006
 
 # CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001,http://localhost:5173,http://localhost:5174,http://192.168.1.114:5173
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
