--- a/Backend-JS/api-gateway-service/package.json
+++ b/Backend-JS/api-gateway-service/package.json
@@ -18,6 +18,7 @@
     "helmet": "^6.1.5",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.3",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "uuid": "^11.1.0",
     "winston": "^3.8.2"
