--- a/Backend-JS/message-svc/.env
+++ b/Backend-JS/message-svc/.env
@@ -1,21 +1,17 @@
 # Server Configuration
 PORT=3004
-NODE_ENV=development # Change to 'production' in production environment
+NODE_ENV=development
 
-# MongoDB Configuration
 MONGODB_URI=mongodb+srv://pratik013pratik:krishimantrapratiknikat@krishidevmessage.bdyub.mongodb.net/?retryWrites=true&w=majority&appName=KrishiDevMessage
 MONGODB_MAX_POOL_SIZE=100
 
-# Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=your_redis_password
-REDIS_TTL=86400 # 24 hours in seconds
+REDIS_TTL=86400 
 
-# RabbitMQ Configuration
 RABBITMQ_URL=amqp://localhost:5672
 
-# Socket Configuration
 SOCKET_PING_TIMEOUT=60000
 SOCKET_PING_INTERVAL=25000
 
@@ -24,22 +20,22 @@ JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRY=7d
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
-# AWS S3 Configuration (for media uploads)
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-AWS_REGION=your_aws_region
-AWS_BUCKET_NAME=your_bucket_name
 
-# API Rate Limiting
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET_NAME=
+
+
 RATE_LIMIT_WINDOW=15
 RATE_LIMIT_MAX_REQUESTS=100
 
 # Media Configuration
-MAX_FILE_SIZE=10485760 # 10MB in bytes
+MAX_FILE_SIZE=10485760 
 ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,video/mp4,video/quicktime
 
 # Cache Configuration
-CACHE_TTL=3600 # 1 hour in seconds
+CACHE_TTL=3600 
 
 
 GROQ_API_KEY=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
