--- a/Frontend/krishimantra/pubspec.yaml
+++ b/Frontend/krishimantra/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   chewie: ^1.7.1
   pin_code_fields: ^8.0.1
   file_picker: ^6.1.1
+  web_socket_channel: ^3.0.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
