--- a/Frontend/krishimantra/pubspec.yaml
+++ b/Frontend/krishimantra/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   file_picker: ^6.1.1
   web_socket_channel: ^3.0.2
   json_annotation: ^4.9.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
