--- a/Frontend/krishimantra/android/app/build.gradle
+++ b/Frontend/krishimantra/android/app/build.gradle
@@ -7,8 +7,7 @@ plugins {
 
 android {
     namespace = "com.example.krishimantra"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    compileSdk = 34
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -24,8 +23,8 @@ android {
         applicationId = "com.example.krishimantra"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 21
+        targetSdk = 34
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
@@ -41,4 +40,10 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    // Add permission handler dependencies
+    implementation "androidx.core:core:1.10.1"
+    implementation "androidx.fragment:fragment:1.6.2"
 }
