fix: refactor the code

--- a/Backend-JS/api-gateway-service/.env
+++ b/Backend-JS/api-gateway-service/.env
@@ -10,20 +10,31 @@ REEL_SERVICE_URL=http://localhost:3005
 NOTIFICATION_SERVICE_URL=http://localhost:3006
 
 # CORS
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001,http://localhost:5173,http://localhost:5174,http://192.168.1.114:5173
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5173,http://localhost:5174
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
-LOG_LEVEL=debug 
+LOG_LEVEL=debug
 
+# JWT
+JWT_SECRET=your-super-secure-jwt-secret-key-change-me-in-production
 
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_SSL=false
 
-# AWS CREDENTIALS
+# AWS CREDENTIALS (in production, use IAM roles instead of keys)
 AWS_ACCESS_KEY_ID=AKIA356SKDKSVAZKB3PX
 AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=ap-south-1
 AWS_BUCKET_NAME=krishidev
 AWS_CLOUDFRONT_DOMAIN=https://d1f0j13imieepb.cloudfront.net
+
+# Circuit Breaker
+CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
+CIRCUIT_BREAKER_RESET_TIMEOUT=30000
