--- a/Backend-JS/main-service/.env.production
+++ b/Backend-JS/main-service/.env.production
@@ -1,34 +1,53 @@
-# Production Environment
+# Environment
 NODE_ENV=production
 PORT=3002
 
-# Database Configuration
-MONGODB_URL=mongodb://production-mongodb-host:27017/krishi-prod
-MONGODB_USER=your-production-mongodb-user
-MONGODB_PASSWORD=your-production-mongodb-password
+# Database
+MONGODB_URL=mongodb://mongodb:27017/krishi-mantra-main
+MONGODB_USER=${MONGO_INITDB_ROOT_USERNAME}
+MONGODB_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
 
-# JWT Configuration
-JWT_SECRET=your-secure-production-jwt-secret
-JWT_EXPIRY=1d
+# Authentication
+JWT_SECRET=${JWT_SECRET}
+JWT_EXPIRY=24h
+REFRESH_TOKEN_EXPIRY=30d
 
-# CORS Configuration
-CORS_ORIGIN=https://your-production-domain.com
+# CORS
+CORS_ORIGIN=${FRONTEND_URL},${API_GATEWAY_URL}
 
-# Redis Configuration
-REDIS_HOST=production-redis-host
+# Redis (for caching and session management)
+REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=your-production-redis-password
+REDIS_PASSWORD=${REDIS_PASSWORD}
+REDIS_SSL=true
 
-# Mail Configuration
-MAIL_HOST=smtp.gmail.com
-MAIL_USER=your-production-email@gmail.com
-MAIL_PASS=your-production-password
+# Clustering (enabled in production)
+ENABLE_CLUSTERING=true
 
-# Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your-production-cloud-name
-CLOUDINARY_API_KEY=your-production-api-key
-CLOUDINARY_API_SECRET=your-production-api-secret
-
-# API Rate Limiting
+# Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX=100 
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Logging
+LOG_LEVEL=info
+
+# Email Service
+SMTP_HOST=${SMTP_HOST}
+SMTP_PORT=${SMTP_PORT}
+SMTP_USER=${SMTP_USER}
+SMTP_PASSWORD=${SMTP_PASSWORD}
+EMAIL_FROM=${EMAIL_FROM}
+
+# File Storage
+CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+
+# External Services
+GEOPLUGIN_API_URL=http://www.geoplugin.net/json.gp
+
+# Other Services URLs
+API_GATEWAY_URL=http://api-gateway:3001
+MESSAGE_SERVICE_URL=http://message-service:3004
+FEED_SERVICE_URL=http://feed-service:3003
+NOTIFICATION_SERVICE_URL=http://notification-service:3006 
