--- a/Backend-JS/api-gateway-service/package.json
+++ b/Backend-JS/api-gateway-service/package.json
@@ -1,29 +1,33 @@
 {
   "name": "api-gateway-service",
   "version": "1.0.0",
-  "description": "API Gateway for microservices",
+  "description": "API Gateway for Krishi Mantra microservices",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
-    "prod": "NODE_ENV=production node index.js"
+    "start": "NODE_ENV=production node index.js",
+    "dev:win": "set NODE_ENV=development&& nodemon index.js",
+    "start:win": "set NODE_ENV=production&& node index.js",
+    "test": "jest"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.758.0",
-    "@aws-sdk/s3-request-presigner": "^3.758.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.11.2",
-    "helmet": "^6.1.5",
-    "http-proxy": "^1.18.1",
-    "http-proxy-middleware": "^3.0.3",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
-    "uuid": "^11.1.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
+    "http-proxy-middleware": "^2.0.6",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
