--- a/Backend-JS/main-service/.env.development
+++ b/Backend-JS/main-service/.env.development
@@ -1,20 +1,53 @@
-# Development Environment
+# Environment
 NODE_ENV=development
 PORT=3002
 
-# Database Configuration
-MONGODB_URL=mongodb+srv://pratik013pratik:krishimantrapratiknikat@krishidevmain.jvvrn.mongodb.net/?retryWrites=true&w=majority&appName=KrishiDevMain
+# Database
+MONGODB_URL=mongodb://localhost:27017/krishi-mantra-main
+MONGODB_USER=
+MONGODB_PASSWORD=
 
-# Mail Configuration
-MAIL_HOST=smtp.gmail.com
-MAIL_USER=pratik04pratik@gmail.com
-MAIL_PASS=hltjfxdzciesqnmw
+# Authentication
+JWT_SECRET=your-development-jwt-secret-key
+JWT_EXPIRY=24h
+REFRESH_TOKEN_EXPIRY=30d
 
-# Security
-JWT_SECRET=shreemant
-CORS_ORIGIN=http://localhost:3001
+# CORS
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001,http://localhost:5173
 
-# Redis Configuration
+# Redis (for caching and session management)
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=your_redis_password 
+REDIS_PASSWORD=
+REDIS_SSL=false
+
+# Clustering (disabled in development)
+ENABLE_CLUSTERING=false
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Logging
+LOG_LEVEL=debug
+
+# Email Service
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=your-mailtrap-username
+SMTP_PASSWORD=your-mailtrap-password
+EMAIL_FROM=dev@krishimantra.com
+
+# File Storage
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+
+# External Services
+GEOPLUGIN_API_URL=http://www.geoplugin.net/json.gp
+
+# Other Services URLs
+API_GATEWAY_URL=http://localhost:3001
+MESSAGE_SERVICE_URL=http://localhost:3004
+FEED_SERVICE_URL=http://localhost:3003
+NOTIFICATION_SERVICE_URL=http://localhost:3006 
